# bls-rust

./: Cargo.toml  README.md
bls-eth-go-binary/: .gitignore  .travis.yml  Makefile  go.mod  readme.md
bls-eth-go-binary/android/: mk.bat
bls-eth-go-binary/bls/: bls.go  bls_test.go  cast.go  mcl.go  rand_test.go
bls-eth-go-binary/bls/include/bls/: bls.h  bls384_256.h
bls-eth-go-binary/bls/include/mcl/: bn.h  curve_type.h
bls-eth-go-binary/bls/tests/: aggregate.txt  sign.txt  verify.txt
bls-eth-go-binary/examples/: alpine.Dockerfile  readme.md  sample.go
bls-eth-go-binary/patch/: bls.patch  mcl.patch
bls-eth-rust/: .gitignore  .travis.yml  Cargo.toml  build.rs  readme.md
bls-eth-rust/benches/: bls381_benches.rs
bls-eth-rust/fuzz/: Cargo.toml
bls-eth-rust/fuzz/fuzz_targets/: fuzz_publickey_serialization.rs  fuzz_secretkey_serialization.rs  fuzz_signature_serialization.rs
bls-eth-rust/src/: lib.rs
bls-eth-rust/tests/: aggregate_verify.txt  fast_aggregate_verify.txt  test.rs
src/: lib.rs
