[package]
name = "bls"
version = "0.1.0"
authors = ["Gautham J <Gauthamastro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.0"
bls_eth_rust = {path= "./bls-eth-rust" } # This should be changed before publishing to crates.io
#bls_eth_rust = "0.0.2"